[package]
name = "Img"
version = "1.0.0"
edition = "2021"
# default-run = "Img"

[features]
default = ["curl"]
curl = []
download = []
infer = ["dep:infer"]
embed = ["dep:base64", "dep:url-escape"]

[[example]]
name = "color"
path = "src/color.rs"
test = true

[dependencies]
crabquery = { version = "*", default-features = false }
serde_json = { version = "*", default-features = false, features = ["alloc"] }

base64 = { version = "*", default-features = false, optional = true }
url-escape = { version = "*", default-features = false, optional = true }

infer = { version = "*", default-features = false, optional = true }

[dev-dependencies]
# file-format = { version = "*", features = ["reader-xml"] }
