cargo-features = ["edition2024"]

[package]
name = "Img"
version = "1.0.0"
edition = "2024"
build = "build.rs"
# default-run = "Img"

[features]
default = ["curl"]
curl = []
download = []
infer = ["dep:infer"]
embed = ["dep:base64"]

[[example]]
name = "color"
path = "src/color.rs"

[dependencies]
crabquery = { version = "*", default-features = false }
serde_json = { version = "*", default-features = false, features = ["alloc"] }
percent-encoding = "*"

base64 = { version = "*", default-features = false, optional = true }
infer = { version = "*", default-features = false, optional = true }

[dev-dependencies]
# file-format = { version = "*", features = ["reader-xml"] }
